--- a/index.html
+++ b/index.html
@@ -478,41 +478,47 @@
           </svg>
         </button>
         <form action="#" class="modal-form">
-          <p>Оставьте свои данные, мы вам перезвоним</p>
+          <p class="modal-form-head">Оставьте свои данные, мы вам перезвоним</p>
           <label class="modal-form-field">
             Имя
             <span class="modal-form-input-wrapper">
               <input type="text" name="user-name" class="modal-form-input" minlength="2" required>
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
             </span>
-            <svg class="modal-form-icon">
-              <use href="./images/icons.svg#icon-name" width="18" height="18"></use>
-            </svg>
           </label>
           <label class="modal-form-field">
             Телефон
             <span class="modal-form-input-wrapper">
               <input type="tel" name="user-phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone2"></use>
+              </svg>
             </span>
-            <svg class="modal-form-icon">
-              <use href="./images/icons.svg#icon-phone2" width="18" height="18"></use>
-            </svg>
             </label>
             <label class="modal-form-field">
               Почта
               <span class="modal-form-input-wrapper">
                 <input type="email" name="user-email" class="modal-form-input" required>
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
               </span>
-              <svg class="modal-form-icon">
-                <use href="./images/icons.svg#icon-email" width="18" height="18"></use>
-              </svg>
             </label>
-            <label class="modal-form-field">
+            <label class="modal-form-field last-field">
               Комментарий
-              <textarea name="user-comment" class="modal-form-comment" placeholder="Введите текст"></textarea>
+              <textarea name="user-message" class="modal-form-comment" placeholder="Введите текст"></textarea>
             </label>
             <input type="checkbox" name="user-policy" class="modal-form-checkbox visually-hidden" id="checkbox-policy" required>
-            <label for="checkbox-policy" class="modal-form-checkbox-policy">Соглашаюсь с рассылкой и принимаю <a class="modal-form-policy-link" href="">Условия договора</a></label>
-          <button type="submit" class="modal-form-button">Отправить</button>
+            <label for="checkbox-policy" class="modal-form-checkbox-policy">
+              <span class="checkbox-icon-wrapper">
+                <svg class="checkbox-icon" width="16" height="15">
+                 <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>Соглашаюсь с рассылкой и принимаю <a class="modal-form-policy-link" href="">Условия договора</a>
+            </label>
+          <button type="submit" class="modal-form-btn">Отправить</button>
         </form>
       </div>
     </div>
