--- a/index.html
+++ b/index.html
@@ -466,6 +466,26 @@
               </li>
             </ul>
           </div>
+          <div class="subscription-form-container">
+            <p class="subscription-form-head">Подпишитесь на рассылку</p>
+            <form action="#" class="subscription-form">
+              <label class="subscription-form-field">
+                <input
+                  type="email"
+                  name="user-email"
+                  class="subscription-form-input"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+              <button type="submit" class="subscription-btn">
+                Подписаться
+                <svg class="subscription-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -482,7 +502,7 @@
           <label class="modal-form-field">
             Имя
             <span class="modal-form-input-wrapper">
-              <input type="text" name="user-name" class="modal-form-input" minlength="2" required>
+              <input type="text" name="user-name" class="modal-form-input" minlength="2" required />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
@@ -491,33 +511,50 @@
           <label class="modal-form-field">
             Телефон
             <span class="modal-form-input-wrapper">
-              <input type="tel" name="user-phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone2"></use>
               </svg>
             </span>
-            </label>
-            <label class="modal-form-field">
-              Почта
-              <span class="modal-form-input-wrapper">
-                <input type="email" name="user-email" class="modal-form-input" required>
-                <svg class="modal-form-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </span>
-            </label>
-            <label class="modal-form-field last-field">
-              Комментарий
-              <textarea name="user-message" class="modal-form-comment" placeholder="Введите текст"></textarea>
-            </label>
-            <input type="checkbox" name="user-policy" class="modal-form-checkbox visually-hidden" id="checkbox-policy" required>
-            <label for="checkbox-policy" class="modal-form-checkbox-policy">
-              <span class="checkbox-icon-wrapper">
-                <svg class="checkbox-icon" width="16" height="15">
-                 <use href="./images/icons.svg#icon-checkbox"></use>
-                </svg>
-              </span>Соглашаюсь с рассылкой и принимаю <a class="modal-form-policy-link" href="">Условия договора</a>
-            </label>
+          </label>
+          <label class="modal-form-field">
+            Почта
+            <span class="modal-form-input-wrapper">
+              <input type="email" name="user-email" class="modal-form-input" required />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field last-field">
+            Комментарий
+            <textarea
+              name="user-message"
+              class="modal-form-comment"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+          <input
+            type="checkbox"
+            name="user-policy"
+            class="modal-form-checkbox visually-hidden"
+            id="checkbox-policy"
+            required
+          />
+          <label for="checkbox-policy" class="modal-form-checkbox-policy">
+            <span class="checkbox-icon-wrapper">
+              <svg class="checkbox-icon" width="16" height="15">
+                <use href="./images/icons.svg#icon-checkbox"></use>
+              </svg> </span
+            >Соглашаюсь с рассылкой и принимаю
+            <a class="modal-form-policy-link" href="">Условия договора</a>
+          </label>
           <button type="submit" class="modal-form-btn">Отправить</button>
         </form>
       </div>
