--- a/portfolio.html
+++ b/portfolio.html
@@ -350,6 +350,26 @@
               </li>
             </ul>
           </div>
+          <div class="subscription-form-container">
+            <p class="subscription-form-head">Подпишитесь на рассылку</p>
+            <form action="#" class="subscription-form">
+              <label class="subscription-form-field">
+                <input
+                  type="email"
+                  name="user-email"
+                  class="subscription-form-input"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+              <button type="submit" class="subscription-btn">
+                Подписаться
+                <svg class="subscription-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
