--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               </svg>
             </span>
           </label>
-          <label class="modal-form-field last-field">
+          <label class="modal-form-field">
             Комментарий
             <textarea
               name="user-message"
